--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -11,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F9514F"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:text="Giỏi Hàng"
         android:fontFamily="@font/be_vietnam_bold"
-        android:textColor="#181725"
+        android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
