--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -10,9 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F9514F"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:text="Yêu Thích"
-        android:textColor="#181725"
+        android:textColor="@color/white"
         android:fontFamily="@font/be_vietnam_bold"
         android:textSize="22sp"
         android:textStyle="bold"
