--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -6,98 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".Activity.ForgotPassActivity">
 
-  <ImageView
-      android:id="@+id/ivBackpas"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="25dp"
-      android:layout_marginTop="30dp"
-      android:src="@drawable/ic_back"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/ivBackpas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
+        android:onClick="BackToLogin"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
 
 
-  <ImageView
-      android:id="@+id/ivLogo"
-      android:layout_width="128dp"
-      android:layout_height="89dp"
-      android:layout_marginStart="20dp"
-      android:layout_marginTop="5dp"
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="128dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
 
-      android:src="@drawable/imghelloscreen"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.46"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/imghelloscreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-  <EditText
-      android:id="@+id/edtPassChange"
-      android:layout_width="0dp"
-      android:fontFamily="@font/be_vietnam_medium"
-      android:layout_height="60dp"
-      android:layout_marginHorizontal="30dp"
-      android:layout_marginTop="120dp"
-      android:background="@drawable/bg_edit_text"
-      android:drawableStart="@drawable/ic_lock"
-      android:drawablePadding="12dp"
-      android:hint="@string/nh_p_m_t_kh_u_m_i"
-      android:paddingStart="16dp"
+    <EditText
+        android:id="@+id/edtPassChange"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/bg_edit_text"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:hint="@string/nh_p_m_t_kh_u_m_i"
+        android:paddingStart="16dp"
 
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
-  <EditText
-      android:id="@+id/edtRePassChange"
-      android:layout_width="0dp"
-      android:layout_height="60dp"
-      android:layout_marginHorizontal="30dp"
-      android:fontFamily="@font/be_vietnam_medium"
-      android:layout_marginTop="25dp"
-      android:background="@drawable/bg_edit_text"
-      android:drawableStart="@drawable/ic_lock"
-      android:drawablePadding="12dp"
-      android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
-      android:paddingStart="16dp"
+    <EditText
+        android:id="@+id/edtRePassChange"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/bg_edit_text"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
+        android:paddingStart="16dp"
 
-      app:layout_constraintBottom_toTopOf="@+id/guideline4"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.491"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/edtPassChange"
-      app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtPassChange"
+        app:layout_constraintVertical_bias="0.0" />
 
-  <Button
-      android:id="@+id/btnLuu"
-      android:layout_width="0dp"
-      android:layout_height="55dp"
-      android:layout_marginHorizontal="80dp"
-      android:layout_marginTop="30dp"
-      android:background="@drawable/bg_btn"
-      android:gravity="center"
-      android:text="@string/l_u"
-      android:textColor="@color/white"
+    <Button
+        android:id="@+id/btnLuu"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/bg_btn"
+        android:gravity="center"
+        android:onClick="onCLickChangepass"
+        android:text="@string/l_u"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtRePassChange"
+        app:layout_constraintVertical_bias="0.214"
+        tools:ignore="OnClick" />
 
-      android:textSize="20sp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toTopOf="@+id/guideline4"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/edtRePassChange"
-      app:layout_constraintVertical_bias="0.214" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
 
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline4"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      app:layout_constraintGuide_percent="0.85" />
-
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline6"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.5" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
