--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_back"
+        android:onClick="onCLickBackForgotPass"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="OnClick" />
@@ -30,12 +31,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:background="@drawable/bg_rim"
+        android:id="@+id/editTextCheckOTP"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/bg_rim"
         android:ems="10"
         android:gravity="center"
         android:hint="Nhập mã"
@@ -63,33 +64,34 @@
         app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnContinue"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/bg_btn"
+        android:onClick="onCLickCheckOtp"
         android:text="Tiếp Tục"
-
         android:textColor="#EFEEEE"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextCheckOTP" />
 
     <TextView
-        android:id="@+id/textView34"
+        android:id="@+id/tvguilaima"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        android:onClick="onCLickSendOtp"
         android:text="Gửi lại mã"
         android:textColor="#780A0A"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/btnContinue"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
