--- a/app/src/main/res/layout/item_tai_khoan.xml
+++ b/app/src/main/res/layout/item_tai_khoan.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="6dp"
     android:layout_marginTop="10dp"
+    android:id="@+id/contranitCustomer"
     android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
