--- a/app/src/main/res/layout/item_vertical_products.xml
+++ b/app/src/main/res/layout/item_vertical_products.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/imgProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
@@ -25,7 +26,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/tvNamePoduct"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
@@ -39,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView5" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/tvMassPoduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -49,9 +50,10 @@
         android:textColor="#7C7C7C"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNamePoduct" />
 
     <TextView
+        android:id="@+id/tvPricePoduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -63,11 +65,11 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:layout_constraintTop_toBottomOf="@+id/tvMassPoduct"
         app:layout_constraintVertical_bias="0.025" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imgBuyPoduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
