--- a/app/src/main/res/layout/activity_hello_screen.xml
+++ b/app/src/main/res/layout/activity_hello_screen.xml
@@ -14,5 +14,6 @@
         android:id="@+id/imgHelloScreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         app:srcCompat="@drawable/imghelloscreen" />
 </LinearLayout>
