--- a/app/src/main/res/layout/item_tai_khoan.xml
+++ b/app/src/main/res/layout/item_tai_khoan.xml
@@ -6,10 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="6dp"
     android:layout_marginTop="10dp"
+    android:focusableInTouchMode="false"
     android:id="@+id/contranitCustomer"
     android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
+        android:focusableInTouchMode="false"
         android:id="@+id/CarviewCustomer"
         android:layout_width="90dp"
         android:layout_height="90dp"
@@ -30,6 +32,7 @@
     <TextView
         android:id="@+id/tvUsernameCustomer"
         android:layout_width="0dp"
+        android:focusableInTouchMode="false"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="20dp"
