--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -79,38 +79,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cvLoginGoogle">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            style="@style/loginFacebook"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#447EC2"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_facebook"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.242"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login_fa"
-                android:textSize="14sp"
-                android:textColor="#FFFFFF"
-                android:fontFamily="@font/be_vietnam_medium"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.253"
-                app:layout_constraintStart_toEndOf="@+id/imageView4"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.483" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:paddingTop="13dp"
+            android:paddingBottom="13dp"
+            android:textSize="18sp"
+            tools:ignore="MissingClass"/>
 
 
     </androidx.cardview.widget.CardView>
