--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="loginFacebook">
+        <item name="android:background">@drawable/btn_facebook</item>
+        <item name="android:layout_width">265dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
 </resources>
