--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activity.ConfirmOTPActivity">
 
     <ImageView
@@ -36,7 +37,7 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
         android:layout_marginTop="60dp"
-        android:background="@drawable/bg_rim"
+        android:background="@drawable/bg_edit_text"
         android:ems="10"
         android:gravity="center"
         android:hint="Nhập mã"
