--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.cart.CartFragment">
 
     <TextView
@@ -33,13 +34,13 @@
         app:mode="same_level">
 
         <FrameLayout
-            android:layout_width="60dp"
+            android:layout_width="65dp"
             android:layout_marginLeft="5dp"
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
                 android:layout_marginLeft="5dp"
-                android:layout_width="64dp"
+                android:layout_width="match_parent"
                 android:layout_height="125dp"
                 android:backgroundTint="#ff0000"
                 app:cardCornerRadius="6dp">
@@ -52,7 +53,7 @@
                     android:fontFamily="@font/be_vietnam_medium"
                     android:textColor="@color/white"
                     android:text="Delete"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
             </androidx.cardview.widget.CardView>
         </FrameLayout>
