--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -116,6 +116,7 @@
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="@string/ng_nh_p"
+        android:onClick="loginDangNhap"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -146,6 +147,7 @@
         android:text="@string/ng_k"
         android:textColor="#B43838"
         android:textSize="16sp"
+        android:onClick="manDangKy"
         android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintLeft_toRightOf="@id/tvKhongTK"
         app:layout_constraintRight_toRightOf="parent"
