--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -51,50 +51,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView4"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="100dp">
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/imageavt" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/img_accout" />
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="85dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_camera" />
-        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="bottom"
+            android:src="@drawable/ic_camera"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="100dp"
+            tools:layout_editor_absoluteY="100dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
-        android:id="@+id/editText4"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_borders_edit"
-        android:drawableRight="@drawable/ic_pen"
-        android:hint="Nhập email"
-        android:paddingLeft="25dp"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:paddingRight="15dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView31" />
-
-    <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextSDT"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="15dp"
@@ -112,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView29" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editTextdate"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="15dp"
@@ -130,7 +107,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextname"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="15dp"
@@ -158,7 +135,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextname" />
 
     <TextView
         android:id="@+id/textView30"
@@ -174,19 +151,6 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 
     <TextView
-        android:id="@+id/textView31"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/d_c_E"
-        android:textColor="#000000"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-    <TextView
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -197,14 +161,14 @@
         android:fontFamily="@font/be_vietnam_medium"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSDT" />
 
     <TextView
-        android:id="@+id/tvDangNhap"
+        android:id="@+id/tvsave"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="22dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="@string/l_u"
@@ -214,7 +178,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editTextdate"
         app:layout_constraintVertical_bias="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
