--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -34,13 +34,14 @@
     <EditText
         android:id="@+id/editTextCheckOTP"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="35dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/bg_edit_text"
         android:ems="10"
         android:gravity="center"
         android:hint="Nhập mã"
+        style="@style/Text"
         android:inputType="textPersonName"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/be_vietnam_medium"
+        style="@style/Text"
         android:gravity="center"
         android:text="@string/m_d_d_g"
-        android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="Gửi lại mã"
-
+        style="@style/Text"
         android:allowClickWhenDisabled="true"
         android:textColor="#780A0A"
         android:textSize="20sp"
