--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,9 +53,8 @@
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="48dp"
-                android:fontFamily="@font/be_vietnam_medium"
+                style="@style/Text"
                 android:text="Cơm Gà Nướng Mật Ong "
-                android:textColor="@color/black"
                 android:textSize="25sp"
                 app:layout_constraintEnd_toStartOf="@+id/imgtymsp"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -69,9 +68,8 @@
                 android:layout_margin="25dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/be_vietnam_medium"
+                style="@style/Text"
                 android:text="15 - 20 phút "
-                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView22"
                 app:layout_constraintTop_toBottomOf="@+id/tvnamesp" />
@@ -176,9 +174,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/be_vietnam_medium"
+                style="@style/Text"
                 android:text="Chi Tiết Món Ăn "
-                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView25" />
@@ -414,9 +411,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="70dp"
                 android:layout_marginEnd="75dp"
-                android:fontFamily="@font/be_vietnam_medium"
+                style="@style/Text"
                 android:text="45.000 đ"
-                android:textColor="@color/black"
                 android:textSize="23sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvnamesp" />
