--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -178,18 +178,18 @@
     <TextView
         android:id="@+id/tvSaveAddress"
         android:layout_width="325dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="272dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="45dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="@string/l_u"
-        android:textStyle="bold"
         android:textColor="#F5F5F5"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_contact3" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
