--- a/app/src/main/res/layout/item_vertical_products_new.xml
+++ b/app/src/main/res/layout/item_vertical_products_new.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="15dp"
     android:layout_width="175dp"
@@ -29,7 +30,7 @@
     <TextView
         android:id="@+id/tvNamePoductNew"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:text="Cơm gà nướng mật ong"
@@ -40,17 +41,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView5" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="15dp"
+        android:src="@drawable/ic_clock"
+        app:layout_constraintBottom_toBottomOf="@+id/tvMassPoductNew"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvMassPoductNew" />
+
     <TextView
         android:id="@+id/tvMassPoductNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="5dp"
-        android:text="2gam"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="15 phút"
         android:textColor="#7C7C7C"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/tvNamePoductNew" />
 
     <TextView
