--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -49,10 +49,9 @@
         android:layout_height="30dp"
         android:text="@string/dia_chi_ban"
         android:gravity="center_vertical"
-        android:fontFamily="@font/be_vietnam_medium"
+        style="@style/Text"
         android:paddingLeft="15dp"
         android:textSize="10dp"
-        android:textColor="#000000"
         android:background="#F6F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,9 +85,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/be_vietnam_medium"
+                style="@style/Text"
                 android:text="Nhà"
-                android:textColor="#000000"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
