--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -23,8 +23,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="30dp"
         android:text="@string/lien_he"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:textColor="#000000"
+        style="@style/Text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.402"
