--- a/app/src/main/res/layout/activity_doi_pass.xml
+++ b/app/src/main/res/layout/activity_doi_pass.xml
@@ -46,7 +46,7 @@
             android:id="@+id/edtPassChange"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:fontFamily="@font/be_vietnam_medium"
+            style="@style/Text"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="150dp"
             android:background="@drawable/bg_edit_text"
@@ -66,7 +66,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="25dp"
-            android:fontFamily="@font/be_vietnam_medium"
+            style="@style/Text"
             android:background="@drawable/bg_edit_text"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="12dp"
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.75" />
+            app:layout_constraintGuide_percent="0.85" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline16"
