--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -31,6 +31,7 @@
         android:background="@drawable/bg_borders_search"
         android:backgroundTint="#F2F3F2"
         app:iconifiedByDefault="false"
+        style="@style/Text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
