--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -63,9 +63,9 @@
             android:layout_height="20dp"
             android:layout_gravity="bottom"
             android:src="@drawable/ic_camera"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="100dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="MissingConstraints" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -74,8 +74,8 @@
         android:id="@+id/editTextSDT"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập số điện thoại"
@@ -92,8 +92,8 @@
         android:id="@+id/editTextdate"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="DD/MM/YY"
@@ -110,12 +110,12 @@
         android:id="@+id/editTextname"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập tên"
-        android:fontFamily="@font/be_vietnam_medium"
+        style="@style/Text"
         android:paddingLeft="25dp"
         android:paddingRight="15dp"
         android:textSize="16sp"
@@ -131,8 +131,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
         android:text="@string/s_d_t"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:textColor="#000000"
+        style="@style/Text"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextname" />
@@ -144,8 +143,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="10dp"
         android:text="@string/h_v_t"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:textColor="#000000"
+        style="@style/Text"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
