--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -373,7 +373,7 @@
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="70dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/bg_btn"
         android:drawableStart="@drawable/ic_logout"
         android:drawablePadding="-31dp"
@@ -383,16 +383,9 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline12"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
