--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,5 +1,6 @@
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="120dp"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="125dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:background="@drawable/bg_borders_sp"
@@ -56,8 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:fontFamily="@font/be_vietnam_medium"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="45.000 đ"
         android:textColor="#000000 "
         android:textSize="16dp"
@@ -67,17 +69,28 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_time"
         app:layout_constraintVertical_bias="1.0" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="15dp"
+        android:src="@drawable/ic_clock"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
+        app:layout_constraintStart_toEndOf="@+id/cardView6"
+        app:layout_constraintTop_toTopOf="@+id/tv_time"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:text="2 gam"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:text="15 phút"
         android:textColor="#7C7C7C"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/cardView6"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
 
