--- a/app/src/main/res/layout/item_search_products.xml
+++ b/app/src/main/res/layout/item_search_products.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
     android:layout_width="match_parent"
     android:layout_height="130dp"
+    android:id="@+id/layout_seach"
     android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
@@ -17,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/img_se_imgsp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
@@ -26,7 +29,7 @@
 
     <TextView
         android:fontFamily="@font/be_vietnam_medium"
-        android:id="@+id/textView17"
+        android:id="@+id/tv_se_tensp"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
@@ -39,36 +42,47 @@
         app:layout_constraintStart_toEndOf="@+id/cardView5"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_marginLeft="15dp"
+        android:id="@+id/imageView"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_clock"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_se_tiem"
+        app:layout_constraintStart_toEndOf="@+id/cardView5"
+        app:layout_constraintTop_toTopOf="@+id/tv_se_tiem" />
+
     <TextView
-        android:fontFamily="@font/be_vietnam_medium"
-        android:id="@+id/textView18"
+        android:id="@+id/tv_se_tiem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="2gam"
         android:textColor="#7C7C7C"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/cardView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/tv_se_tensp" />
 
     <TextView
+        android:id="@+id/tv_se_gia"
         android:fontFamily="@font/be_vietnam_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="45.000 đ"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:layout_constraintTop_toBottomOf="@+id/tv_se_tiem"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/img_se_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
