--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,9 @@
         <item name="android:layout_height">100dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
+    <style name="Text">
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/be_vietnam_medium</item>
+    </style>
 </resources>
